--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,8 +11,6 @@ body {
   height: 100%;
   margin: 0;
   font-family: 'Roboto', sans-serif;
-
-  transition: background-color 1s linear;
 }
 
 #app {
@@ -25,6 +23,8 @@ body {
 
   color: var(--text-color);
   background-color: var(--bg-color);
+
+  transition: background-color 1s linear;
 
   width: 100%;
   height: 100%;
@@ -86,7 +86,7 @@ body {
   text-transform: capitalize;
 }
 
-.sun {
+#sun {
   position: absolute;
   left: 50px;
   top: 20px;
@@ -104,13 +104,21 @@ body {
   }
 }
 
-.moon {
+#moon {
   position: absolute;
-  left: 50px;
+  right: 50px;
   top: 20px;
 
   width: 100px;
   height: 100px;
   border-radius: 50%;
   background-color: rgb(255, 251, 213);
+
+  transform-origin: 80% 300%;
+  transition: transform 1s ease-in-out;
+
+  &.move {
+    transform: rotate(90deg);
+  }
+
 }
