Added error handling

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -86,6 +86,10 @@ body {
   text-transform: capitalize;
 }
 
+#status-message {
+  text-transform: capitalize;
+}
+
 #sun {
   position: absolute;
   left: 50px;
