Changed day background colour

--- a/src/scss/_themes.scss
+++ b/src/scss/_themes.scss
@@ -1,7 +1,7 @@
 $themes: (
   "day": (
     "colors": (
-      "bg-color": #85b0ff,
+      "bg-color": #478aff,
       "btn-bg": #ccc,
       "text-color": #000,
       "location-text": #000
